gcc/testsuite/g++.dg/cpp0x/pr33839.C
@@ -1,0 +1,8 @@
+// { dg-options -std=c++0x }
+template<int> struct A;
+
+void foo()
+{
+  __decltype A<0>; // { dg-error "invalid declarator" }
+  __decltype (A<0>); // { dg-error "must be an expression" }
+}
